--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,16 @@
             <artifactId>fastjson2</artifactId>
             <version>2.0.23</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>3.17</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>3.17</version>
+        </dependency>
 
     </dependencies>
     <build>
